objects/ASI_CRM_Customer_Group__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Chi_Name__c</fullName>
        <label>Chi Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>HQ/Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Duplication_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Duplication Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Eng_Name__c</fullName>
        <label>Eng Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region_Code__c</fullName>
        <label>Greater Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region__c</fullName>
        <label>Greater Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>大中区 Greater Central</fullName>
                </value>
                <value>
                    <fullName>大东区 Greater East</fullName>
                </value>
                <value>
                    <fullName>大北区 Greater North</fullName>
                </value>
                <value>
                    <fullName>大西北区 Greater Northwest</fullName>
                </value>
                <value>
                    <fullName>大南区 Greater South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_IHBR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IHBR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Customer Group for Price</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_CN_Channel__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN New Channel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Customer Groups</relationshipLabel>
        <relationshipName>Customer_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_Of_Line__c</fullName>
        <label>Number Of Line</label>
        <summaryForeignKey>ASI_CRM_Customer_Group_Line__c.ASI_CRM_Customer_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Customer Group for Price, CN National Group</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Region__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Region</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Customer Groups</relationshipLabel>
        <relationshipName>Customer_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chi_Name__c</columns>
        <columns>ASI_CRM_Eng_Name__c</columns>
        <columns>ASI_CRM_Greater_Region__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Groups</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Customer_Group_for_Price</fullName>
        <active>true</active>
        <label>CN Customer Group for Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_National_Group</fullName>
        <active>true</active>
        <label>CN National Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Direct_Sales_Customer_Group</fullName>
        <active>true</active>
        <label>JP Direct Sales Customer Group</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>